<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="412dp"
        android:layout_height="45dp"
        android:background="#850799"
        android:text="@string/titulo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="406dp"
        android:layout_height="96dp"
        android:gravity="center|right"
        android:text="@string/numero_por_defecto"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_1"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_2"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="440dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_4"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_3"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnsumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="#807A7A"
        android:text="@string/btn_sumar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="441dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_5"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="442dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_6"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btnrestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#807A7A"
        android:text="@string/btn_restar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnmultipilcar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_7"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btndecimal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_8"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_9"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnigual"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btnmultipilcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#807A7A"
        android:text="@string/btn_multiplicar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btndividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <Button
        android:id="@+id/btndecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="324dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_decimal"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="325dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btn_0"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btndecimal" />

    <Button
        android:id="@+id/btndividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#807A7A"
        android:text="@string/btn_barra"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnborrar"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btnborrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="264dp"
        android:backgroundTint="#2ADDE7"
        android:text="@string/btn_clear"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnigual" />

    <Button
        android:id="@+id/btnigual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="264dp"
        android:backgroundTint="#38E634"
        android:text="@string/btn_igual"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnborrar"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>